# sch

./: .clang-format  .clang-tidy  BigInt_8hpp.html  BigInt_8hpp.js  BigInt_8hpp__incl.map  BigInt_8hpp__incl.md5  BigInt_8hpp_source.html  CMakeLists.txt  CPPLINT.cfg  Doxyfile  LICENSE.md  README.md  annotated.html  annotated_dup.js  classes.html  classsch_1_1BigInt-members.html  classsch_1_1BigInt.html  classsch_1_1BigInt.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  jquery.js  navtreedata.js  navtreeindex0.js
.github/: codecov.yml
.github/workflows/: cmake-multi-platform.yml  coverage.yml  gh-pages.yml
html/: BigInt_8hpp_source.html  classes.html  classsch_1_1BigInt-members.html  functions.html  functions_func.html  graph_legend.html  index.html
html/search/: all_2.js  all_3.js  all_4.js  all_7.js  all_a.js  all_b.js  all_c.js  all_f.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js
include/: BigInt.hpp  BigInt10.hpp  BigInt_8.hpp  CMakeLists.txt  Sign.h  schmath.hpp  sign.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  functions_0.js  pages_0.js  pages_2.js  pages_3.js  searchdata.js
src/: BigInt.hpp  BigUInt.hpp
test/: .clang-tidy  BigInt.cxx  BigInt10.cxx  BigInt10_perf.cxx  BigInt_8.cxx  BigInt_perf.cxx  BigUInt.cxx  CMakeLists.txt
test/BigInt/: BigInt-core.cxx  BigInt10.hpp  CMakeLists.txt  helpers.cxx  helpers.hpp  templated-operators.cxx
test/BigInt10/: BigInt10.cxx
